# bee-heavy-healthcheck

./: .adr-dir  .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
bee_heavy_healthcheck/: checks.py  main.py
doc/adr/: 0001-record-architecture-decisions.md
doc/adr/templates/: template.md
doc/devel/: mob.md
docker/: Dockerfile  docker-compose-test.yml
scripts/: pre-commit-run.sh  tests-run-docker.sh  tests-run-local-coverage.sh  tests-run-local-pytest.sh
scripts/docker/: cmd_docker_run_tests.sh
tests/: conftest.py  test_check_options.py  test_check_s3.py  test_check_unit_s3.py  test_create_summary.py  test_create_summary_sum.py  test_one.py
