[tool.poetry]
name = "bee-heavy-healthcheck"
version = "0.1.0"
description = ""
authors = ["Bee Dev Team <dev@beefree.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.2"
boto3 = "^1.26.89"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
isort = "^5.12.0"
black = "^23.1.0"
pytest = "^7.2.2"
callee = "^0.3.1"
pytest-html = "^3.2.0"
coverage = "^7.2.1"
mypy = "^1.1.1"
ipdb = "^0.13.13"
pre-commit = "^3.1.1"
autoflake = "^2.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
